# text-to-cypher-distillation

./: .gitignore  README.md  fdd_finetune.py  finetune.py  finetune_qwen3.5.py  infer.py  log_qwen3_0.6B_4B_adaptive_srkl_kd0.6_wrel0.5.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.6_wrel0.6.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.6_wrel0.7.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.6_wrel0.8.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.6_wrel0.9.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.6_wrel1.0.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.7_wrel1.1.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.7_wrel1.2.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.7_wrel1.3.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.7_wrel1.4.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.7_wrel1.5.txt  log_qwen3_0.6B_4B_adaptive_srkl_kd0.7_wrel1.6.txt  pyproject.toml  run_finetuning_qwen3.5.sh  run_infer_hf.ps1  run_infer_hf.sh  running.sh  running_2.sh  running_neo4j_text2cypher.sh  span_finetune.py  test_run_finetuning_qwen3.5.sh  updated_fdd_finetune.py  utils.py
data_utils/: distributed_indexed.py  lm_datasets.py  lm_datasets_2.py
results/Cypherbench/: full_cyphers_result_Qwen3-0.6B_distill_distillm.json  full_cyphers_result_Qwen3-0.6B_distill_rkl.json  full_cyphers_result_Qwen3-0.6B_distill_sfkl_kd0.6.json  full_cyphers_result_Qwen3-0.6B_distillm_adaptive_srkl_kd0.6_wrel0.5.json  full_cyphers_result_Qwen3-0.6B_distillm_adaptive_srkl_kd0.6_wrel0.6.json  full_cyphers_result_Qwen3-0.6B_distillm_adaptive_srkl_kd0.6_wrel0.7.json  (+9 more)
src/: baseline_llm.py  benchmark_data_loader.py  calculate_scores_json.py  merge_json.py
(+251 files in other folders)
