[project]
name = "text2cypher-distillation-draft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "deepspeed>=0.18.9",
    "huggingface-hub>=1.11.0",
    "neo4j>=6.1.0",
    "nltk>=3.9.4",
    "numerize>=0.12",
    "numpy>=2.4.4",
    "peft>=0.19.1",
    "protobuf>=7.34.1",
    "rich>=15.0.0",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.2.1",
    "torch==2.8.0+cu128",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.3",
    "transformers>=5.6.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
